<resources>
    <!-- Заголовки и названия -->
    <string name="app_name">Список задач</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_task">Задача</string>
    <string name="title_activity_main">Список задач</string>
    <string name="title_activity_group_list">Группы задач</string>

    <!-- Выбор даты задачи -->
    <string name="date_title">Дата выполнения</string>
    <string name="date_not_set">Не установлена</string>
    <string name="date_today">Сегодня</string>
    <string name="date_tomorrow">Завтра</string>
    <string name="date_pick_date">Выбрать дату</string>
    <string name="date_without_date">Без даты</string>

    <!-- Выбор приоритета задачи -->
    <string name="priority_title">Приоритет</string>
    <string name="priority_emergency">Чрезвычайный</string>
    <string name="priority_high">Высокий</string>
    <string name="priority_common">Обычный</string>
    <string name="priority_low">Низкий</string>
    <string name="priority_lowest">Самый низкий</string>

    <!-- Выбор группы задачи -->
    <string name="group_title">Группа</string>
    <string name="group_not_set">Не выбрана</string>

    <!-- Выбор цвета группы -->
    <string name="color_title">Цвет группы</string>
    <string name="color_without">Без цвета</string>
    <string name="color_1_red">Красный</string>
    <string name="color_2_orange">Оранжевый</string>
    <string name="color_3_yellow">Желтый</string>
    <string name="color_4_green">Зеленый</string>
    <string name="color_5_blue">Синий</string>
    <string name="color_6_violet">Фиолетовый</string>
    <string name="color_7_pink">Розовый</string>
    <string name="color_not_set">Не выбран</string>

    <!-- Выбор повтора задачи -->
    <string name="repeat_title">Повторение</string>
    <string name="repeat_not_set">Без повтора</string>
    <string name="repeat_daily">Ежедневно</string>
    <string name="repeat_every_week">Каждую неделю</string>
    <string name="repeat_once_a_month">Раз в месяц</string>
    <string name="repeat_in_a_year">Через год</string>
    <string name="repeat_do_not">Не повторять</string>

    <!-- Выбор напоминания задачи -->
    <string name="reminder_title">Напоминание</string>
    <string name="reminder_not_set">Без напоминания</string>
    <string name="reminder_on_the_day">В день выполнения</string>
    <string name="reminder_day_before">За день</string>
    <string name="reminder_week_before">За неделю</string>
    <string name="reminder_month_before">За месяц</string>
    <string name="reminder_pick_date">Выбрать дату</string>


    <!-- Имена пунктов главного бокового меню -->
    <string name="menu_unsorted_tasks">Не отсортированные</string>
    <string name="menu_today_tasks">Сегодня</string>
    <string name="menu_month_tasks">На месяц</string>
    <string name="menu_tasks_without_date">Без даты</string>
    <string name="menu_all_tasks">Все задачи</string>
    <string name="menu_finished_tasks">Завершенные</string>
    <string name="menu_edit_groups">Редактировать группы</string>

    <!-- Другие разные строки -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="task_title_hint">Описание задачи…</string>
    <string name="title_activity_edit_group">EditGroupActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

</resources>
