<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/type_task_list"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_task_unsorted"
            android:icon="@drawable/ic_inbox_24dp"
            android:title="@string/menu_unsorted_tasks"/>
        <item
            android:id="@+id/nav_task_today"
            android:icon="@drawable/ic_event_40dp"
            android:title="@string/menu_today_tasks"/>
        <item
            android:id="@+id/nav_task_month"
            android:icon="@drawable/ic_event_note_24dp"
            android:title="@string/menu_month_tasks"/>
        <item
            android:id="@+id/nav_task_without_date"
            android:icon="@drawable/ic_event_busy_24dp"
            android:title="@string/menu_tasks_without_date"/>
        <item
            android:id="@+id/nav_task_unfinished"
            android:icon="@drawable/ic_inbox_24dp"
            android:title="@string/menu_all_tasks"/>
        <item
            android:id="@+id/nav_task_finished"
            android:icon="@drawable/ic_done_24dp"
            android:title="@string/menu_finished_tasks"/>
    </group>

    <group
        android:id="@+id/group_task"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_edit_group"
            android:icon="@drawable/ic_inbox_24dp"
            android:title="@string/menu_edit_groups"/>
    </group>
</menu>
