<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ru.kulikovman.todoapp.EditTaskActivity"
    tools:showIn="@layout/activity_edit_task">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="20dp"
        android:paddingStart="30dp"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <LinearLayout
            android:id="@+id/date_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:onClick="taskOptions"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/date_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="30dp"
                android:background="@color/transparent"
                app:srcCompat="@drawable/ic_event_24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/date_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date_title"
                    android:textColor="@color/optionTitleColor"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/date_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date_not_set"
                    android:textColor="@color/optionTextColor"
                    android:textSize="14sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/priority_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:onClick="taskOptions"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/priority_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="30dp"
                android:background="@color/transparent"
                app:srcCompat="@drawable/ic_low_priority_24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/priority_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/priority_title"
                    android:textColor="@color/optionTitleColor"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/priority_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/priority_common"
                    android:textColor="@color/optionTextColor"
                    android:textSize="14sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/color_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:onClick="taskOptions"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/group_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="30dp"
                android:background="@color/transparent"
                app:srcCompat="@drawable/ic_dns_black_24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/group_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/group_title"
                    android:textColor="@color/optionTitleColor"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/group_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/group_not_set"
                    android:textColor="@color/optionTextColor"
                    android:textSize="14sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/repeat_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:onClick="taskOptions"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/repeat_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="30dp"
                android:background="@color/transparent"
                app:srcCompat="@drawable/ic_replay_24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/repeat_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/repeat_title"
                    android:textColor="@color/optionTitleColor"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/repeat_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/repeat_not_set"
                    android:textColor="@color/optionTextColor"
                    android:textSize="14sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/reminder_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:onClick="taskOptions"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/reminder_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="30dp"
                android:background="@color/transparent"
                app:srcCompat="@drawable/ic_alarm_24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/reminder_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reminder_title"
                    android:textColor="@color/optionTitleColor"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/reminder_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reminder_not_set"
                    android:textColor="@color/optionTextColor"
                    android:textSize="14sp" />

            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
